docker-compose/templates/yass-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: yass
  name: yass
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: yass
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/flow-ai-hackathon-2023-default: "true"
        io.kompose.service: yass
    spec:
      containers:
        - args:
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8000
          image: yass
          name: yass
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app
              name: yass-claim0
      restartPolicy: Always
      volumes:
        - name: yass-claim0
          persistentVolumeClaim:
            claimName: yass-claim0
status: {}
